Fixing bugs with cutscene